Copyright 1998-2010 Gerald Combs <gerald@wireshark.org> and contributors.
This is free software; see the source for copying conditions. There is NO
warranty; not even for MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.
Compiled with GTK+ 2.20.1, (32-bit) with GLib 2.24.1, with libpcap 1.0.0, with
libz 1.2.3.3, with POSIX capabilities (Linux), without libpcre, with SMI 0.4.8,
with c-ares 1.7.0, with Lua 5.1, without Python, with GnuTLS 2.8.5, with Gcrypt
1.4.4, with MIT Kerberos, with GeoIP, with PortAudio V19-devel (built Feb 18
2010 22:31:30), without AirPcap.
Running on Linux 2.6.32-24-generic, with libpcap version 1.0.0, with libz
1.2.3.3, GnuTLS 2.8.5, Gcrypt 1.4.4.
Built using gcc 4.4.3.
I'm getting an assert at proto.c:2761 from a boolean attribute field in the packet in the attached file.
(In reply to comment #2) > (In reply to comment #1) > > At packet-zbee-zcl.c:1378, should call proto_tree_add_boolean() instead of > > proto_tree_add_uint(). > > What about using proto_tree_add_item(), like this: > > proto_tree_add_item(tree, hf_zbee_zcl_attr_boolean, tvb, *offset, 1, FALSE); Even better.
(In reply to comment #4) > Committed revision 33887. Thanks. Will that go in trunk-1.4 also or is that frozen against fixes like this?There's probably a lot of places in packet-zbee-zcl.c which should be calling proto_tree_add_item() rather than one of the type-specific functions.I'm chasing another bug that I'm seeing with Zigbee where an uninitialised tvb isprocessed. It's hard to reproduce though (need to set and clear filters to trigger it).
(In reply to comment #5) > Thanks. Will that go in trunk-1.4 also or is that frozen against fixes like > this? Yes, this fix will make it into 1.4.> There's probably a lot of places in packet-zbee-zcl.c which should be calling > proto_tree_add_item() rather than one of the type-specific functions. I know. Feel free to make a patch :)