Fix for attribute boolean, from bug 5127.

svn path=/trunk/; revision=33887